# floop-rust-sdk

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: recipes.md
src/: api_keys.rs  error.rs  lib.rs  library.rs  projects.rs  secrets.rs  subdomains.rs  subscriptions.rs  uploads.rs  usage.rs  user.rs
tests/: integration.rs
