[package]
name = "floopfloop"
version = "0.1.0-alpha.4"
edition = "2021"
rust-version = "1.75"
authors = ["FloopFloop <info@floopfloop.com>"]
license = "MIT"
description = "Official Rust SDK for the FloopFloop API (https://www.floopfloop.com)"
repository = "https://github.com/FloopFloopAI/floop-rust-sdk"
homepage = "https://www.floopfloop.com"
documentation = "https://docs.rs/floopfloop"
keywords = ["floopfloop", "sdk", "vibe-coding", "api-client"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
httpdate = "1"
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[lib]
name = "floopfloop"
path = "src/lib.rs"
